feat(payment): add payment splitting functionality with commission calculation